the ssh box has an older version of java, so fixed something